fix(style.scss): text-align: center;を削除

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,6 +6,5 @@ body {
 }
 body {
   margin: 0;
-  text-align: center;
   font-family: Roboto, 'Helvetica Neue', sans-serif;
 }
